fixed styling on new pages, fixed blurred images, added speak button

--- a/appDock/app/pages/home/home.scss
+++ b/appDock/app/pages/home/home.scss
@@ -1,9 +1,15 @@
 $bgColor: #8db255;
 $wood: #aa8736;
 $title: #F3C13A;
+$writing: darken($title,30);
+$talk: gold;
 
 &::-webkit-scrollbar {
     display: none;
+}
+
+.talk{
+  color: $talk;
 }
 
 .home {
